--- a/admin/src/app/components/admin/main-room-class/main-room-class.component.scss
+++ b/admin/src/app/components/admin/main-room-class/main-room-class.component.scss
@@ -265,13 +265,12 @@
   }
 
   .popup-section {
-    display: flex;
     align-items: center;
     margin-bottom: 1rem;
 
     label {
       flex-shrink: 0;
-      width: 140px;
+      width: 100%;
       font-weight: 600;
       color: #444;
       white-space: nowrap;
