--- a/admin/src/app/app.component.html
+++ b/admin/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-toast
   [title]="toastTitle"
   [message]="toastMessage"
-  [visible]="showToast"
-  [type]="toastType">
+  [visible]="showToast">
 </app-toast>
-
-<router-outlet></router-outlet>
+<router-outlet />
